# IMP

./: CMakeLists.txt  Doxyfile  README.md  build.sh  clean.sh  overview.txt
include/execution/: exec_core.h  exec_function.h  exec_printer.h  interpreter.h  io_stream.h  stream_packet.h  stream_queue.h  util.h  var_mapping.h
include/parsing/: arch.h  arch_printer.h  ast.h  ast_printer.h  code_gen.h  code_printer.h  semantic_analysis.h  symbol_table.h
src/execution/: exec_core.c  exec_function.c  exec_printer.c  interpreter.c  io_stream.c  stream_packet.c  stream_queue.c  util.c  var_mapping.c
src/parsing/: arch.c  arch_printer.c  ast.c  ast_printer.c  code_gen.c  code_printer.c  lex.yy.c  main.c  parser.tab.c  parser.tab.h  parser.y  scanner.l  semantic_analysis.c  symbol_table.c
test/experiment-1/: factorial_test.cmc  factorial_test_parallel.cmc  factorial_test_parallel_interleaved.cmc
test/experiment-2/: dual_core.cmc  single_core.cmc  three_core.cmc  three_core_offloadhash.cmc
test/misc/: button_test.cmc  loop_example.cmc  loop_test.cmc  printer_test.cmc  printer_test_parallel.cmc  state_test.cmc  state_test_time.cmc  test.cmc
